# tsurl

./: .gitignore  Cargo.toml  README.md  RUN.md  auth.txt
sled_data/: db  snap.000000000000063A  snap.00000000000007B0
src/: api.rs  database.rs  frontend.rs  main.rs
src/api/: api_utils.rs  links.rs
src/frontend/: admin_panel.rs  frontend_utils.rs
static/: style.css
static/index/: index.html
templates/: admin_dashboard.html.hbs  error.html.hbs
