[package]
name = "tsurl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json","secrets"] }
rocket_dyn_templates = {version = "0.1.0-rc.1", features = ["handlebars"]}
rand = "0.8.4"
sled = "0.34.7"
sled-extensions = {version="0.2.0", features = ["bincode"]}
serde = { version = "1.0.117", features = ["derive"] }
htpasswd-verify = "0.2.1"